[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "torchesnufft"
version = "0.0.1"
description = "A differentiable implementation of the non-uniform fast Fourier transform with an exponential of semicircle kernel in PyTorch"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Tom Lütjen", email = "tom.luetjen@icloud.com" }]
keywords = ["pytorch", "fft", "mri"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = ["torch>=2.2"]

[project.optional-dependencies]
tests = [
  "ruff>=0.6.9",
  "pytest>=8.2",
  "pytest-benchmark>=4.0",
  "pytest-cov>=5.0",
  "torchkbnufft>=1.5",
  "finufft>=2.4",
]
dev = [
  "ruff>=0.6.9",
  "pytest>=8.2",
  "pytest-benchmark>=4.0",
  "pytest-cov>=5.0",
  "torchkbnufft>=1.5",
  "finufft>=2.4",
  "matplotlib>=3.9",
  "scikit-image>=0.24",
]

[project.urls]
Repository = "https://github.com/tomluetjen/torchesnufft.git"
Issues = "https://github.com/tomluetjen/torchesnufft/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["torchesnufft"]
exclude = ["tests*", "examples*", "benchmarks*"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E203", "E501"]

[tool.ruff.lint.isort]
known-first-party = ["torchesnufft"]

[tool.pytest.ini_options]
python_files = ["test_*.py", "benchmark_*.py"]
python_functions = ["test_*", "benchmark_*"]
testpaths = ["tests", "benchmarks"]